--- a/dotfiles/.config/sway/config
+++ b/dotfiles/.config/sway/config
@@ -86,7 +86,7 @@ input "type:touchpad" {
 }
 
 # hold the "back" button to use trackball for scrolling
-input "1133:45121:ERGO_M575S_Mouse" {
+input "1133:45121:ERGO_M575_Mouse" {
     events enabled
     pointer_accel 0.0
     accel_profile adaptive
