--- a/dotfiles/.config/alacritty/alacritty.toml
+++ b/dotfiles/.config/alacritty/alacritty.toml
@@ -20,36 +20,37 @@ family = "SauceCodePro Nerd Font"
 style = "Regular"
 
 
-# Colors (PaperColor - Light)
-#   source: https://github.com/alacritty/alacritty-theme/blob/master/themes/papercolor_light.toml
+# Night Owl Light
+# source: https://terminalcolors.com/themes/night-owl/light/
 
-# Default colors
 [colors.primary]
-background = '#eeeeee'
-foreground = '#444444'
+foreground = "#403f53"
+background = "#f6f6f6"
 
 [colors.cursor]
-text = '#eeeeee'
-cursor = '#444444'
+text = "#f6f6f6"
+cursor = "#403f53"
 
-# Normal colors
+[colors.selection]
+text = "#403f53"
+background = "#e0e0e0"
+
 [colors.normal]
-black   = '#eeeeee'
-red     = '#af0000'
-green   = '#008700'
-yellow  = '#5f8700'
-blue    = '#0087af'
-magenta = '#878787'
-cyan    = '#005f87'
-white   = '#444444'
+black = "#403f53"
+red = "#de3d3b"
+green = "#08916a"
+yellow = "#e0af02"
+blue = "#288ed7"
+magenta = "#d6438a"
+cyan = "#2aa298"
+white = "#93a1a1"
 
-# Bright colors
 [colors.bright]
-black   = '#bcbcbc'
-red     = '#d70000'
-green   = '#d70087'
-yellow  = '#8700af'
-blue    = '#d75f00'
-magenta = '#d75f00'
-cyan    = '#005faf'
-white   = '#005f87'
+black = "#403f53"
+red = "#de3d3b"
+green = "#08916a"
+yellow = "#daaa01"
+blue = "#288ed7"
+magenta = "#d6438a"
+cyan = "#2aa298"
+white = "#93a1a1"
