--- a/dotfiles/.config/sway/config
+++ b/dotfiles/.config/sway/config
@@ -98,6 +98,18 @@ input "1133:45121:ERGO_M575_Mouse" {
     scroll_button_lock disabled
 }
 
+input "1133:45121:ERGO_M575S_Mouse" {
+    events enabled
+    pointer_accel 0.0
+    accel_profile adaptive
+    natural_scroll disabled
+    left_handed disabled
+    middle_emulation enabled
+    scroll_method on_button_down
+    scroll_button 275
+    scroll_button_lock disabled
+}
+
 ### Key bindings
 #
 # Basics:
