--- a/dotfiles/.config/btop/btop.conf
+++ b/dotfiles/.config/btop/btop.conf
@@ -53,7 +53,7 @@ graph_symbol_proc = "default"
 shown_boxes = "cpu mem net proc"
 
 #* Update time in milliseconds, recommended 2000 ms or above for better sample times for graphs.
-update_ms = 1600
+update_ms = 500
 
 #* Processes sorting, "pid" "program" "arguments" "threads" "user" "memory" "cpu lazy" "cpu direct",
 #* "cpu lazy" sorts top process over time (easier to follow), "cpu direct" updates top process directly.
@@ -169,7 +169,7 @@ show_swap = True
 swap_disk = True
 
 #* If mem box should be split to also show disks info.
-show_disks = True
+show_disks = False
 
 #* Filter out non physical disks. Set this to False to include network disks, RAM disks and similar.
 only_physical = True
