--- a/dotfiles/.config/sway/config
+++ b/dotfiles/.config/sway/config
@@ -342,6 +342,7 @@ exec dbus-update-activation-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP=sway
 exec gnome-keyring-daemon --start --daemonize --components=secrets
 exec_always systemctl --user restart kanshi &
 exec_always /home/rramirez/bin/setup-swayidle &
+exec_always /home/rramirez/bin/mask-hotspot-data.sh &
 
 #
 # includes:
