gray swaybar background

--- a/dotfiles/.config/sway/config
+++ b/dotfiles/.config/sway/config
@@ -331,11 +331,11 @@ bar {
     # The default just shows the current date and time.
     status_command while ~/.config/sway/scripts/status.sh; do sleep 1; done
 
-    # colors {
-    #     statusline #ffffff
-    #     background #323232
-    #     inactive_workspace #32323200 #32323200 #5c5c5c
-    # }
+    colors {
+        statusline #ffffff
+        background #323232
+        inactive_workspace #32323200 #32323200 #5c5c5c
+    }
 }
 
 # Clamshell mode configuration
