update sway clamshell configuration handling

--- a/dotfiles/.config/sway/config
+++ b/dotfiles/.config/sway/config
@@ -338,13 +338,13 @@ bar {
     }
 }
 
-# Clamshell mode configuration
-# First, identify your laptop display name
-set $laptop eDP-1
+# --- Clamshell mode configuration ---
+
+set $laptop_display eDP-1
 
 # Bind lid switch events to disable/enable laptop display
-bindswitch --reload --locked lid:on output $laptop disable
-bindswitch --reload --locked lid:off output $laptop enable
+bindswitch --reload --locked lid:on output $laptop_display disable
+bindswitch --reload --locked lid:off output $laptop_display enable
 
 # Handle reload case - check lid state on startup/reload
 exec_always ~/bin/sway-clamshell-init
